# feeding-tube

./: .gitignore  Cargo.toml  README.md  install  justfile  package.json  pnpm-lock.yaml
src/: App.jsx  app.rs  cli.jsx  db.rs  index.js  main.rs  player.rs  ui.rs  ytdlp.rs
src/components/: ClickableRow.jsx  DescriptionPanel.jsx  Header.jsx  Loading.jsx  StatusBar.jsx  VideoRow.jsx
src/lib/: config.js  dateUtils.js  db.js  player.js  ui.js  validation.js  ytdlp.js
src/screens/: ChannelList.jsx  SearchResults.jsx  VideoList.jsx
tests/: dateUtils.test.js  db.test.js  player.test.js  ui.test.js  validation.test.js  ytdlp.test.js
